# code-coverter

./: .cursorrules  .gitignore  README.md  migration_analysis.md  migration_report.md  pyproject.toml  report.md
app-for-scanning/: package-lock.json
output-report/: app-component-index.md  app-module-index.md  app-routing-module-index.md  data-service-index.md  feature-module-index.md  header-component-index.md
output-report/app-for-scanning/src/: app-module.md  app-routing-module.md
output-report/app-for-scanning/src/app/: app-component.md
output-report/app-for-scanning/src/components/: header-component.md
output-report/app-for-scanning/src/modules/: feature-module.md
output-report/app-for-scanning/src/services/: data-service.md
output-report/components/: dashboard-component-migration.md  dashboard-component.md  index.md
output-report/routing/: app-routing.md  index.md
output-report/services/: index.md  stats-service.md
output-report/src/: app-structure.md
output-report/state/: ngrx-state-management.md
output-report/state-management/: index.md
src/code_doc_ai/: crew.py  main.py
src/code_doc_ai/config/: agents.yaml  tasks.yaml
src/code_doc_ai/tools/: __init__.py  custom_file_read.py  file_generator.py
templates/: component_template.md
