[project]
name = "code_doc_ai"
version = "0.1.0"
description = "code-doc-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
code_doc_ai = "code_doc_ai.main:run"
run_crew = "code_doc_ai.main:run"
train = "code_doc_ai.main:train"
replay = "code_doc_ai.main:replay"
test = "code_doc_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
